--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Shopper"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".componets.ScreenMain"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Shopper">
@@ -23,6 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".componets.ScreenSearchCar"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Shopper">
+
+        </activity>
+
     </application>
 
 </manifest>
